Increased date font size and wrapped month dateth in a span to prevent line breaks

--- a/fringe/css/main.css
+++ b/fringe/css/main.css
@@ -100,6 +100,11 @@ button:hover {
   text-align: center;
   background-color: rgb(238,54,96);
   color: white;
+  font-size: 1.5em;
+}
+
+#month-date {
+  white-space: nowrap;
 }
 
 #time, #show-count {
